@@ -1,6 +1,6 @@
 /*
  *	Copyright (C) 2015-2016 Yizhou Shan <shanyizhou@ict.ac.cn>
- *	
+ *
  *	This program is free software; you can redistribute it and/or modify
  *	it under the terms of the GNU General Public License as published by
  *	the Free Software Foundation; either version 2 of the License, or
@@ -19,10 +19,22 @@
 #ifndef _SANDIX_CPUMASK_H_
 #define _SANDIX_CPUMASK_H_
 
-#ifndef CONFIG_NR_CPUS
-#define CONFIG_NR_CPUS	(1)
+#include <sandix/types.h>
+#include <sandix/threads.h>
+#include <sandix/bitmaps.h>
+
+typedef struct cpumask {
+	DEFINE_BITMAP(bits, NR_CPUS);
+} cpumask_t;
+
+#define cpumask_bits(maskp)	((maskp)->bits)
+
+#if NR_CPUS == 1
+#define nr_cpu_ids	1
+#else
+extern int nr_cpu_ids;
 #endif
 
-#define NR_CPUS			CONFIG_NR_CPUS
+#define nr_cpumask_bits	nr_cpu_ids
 
 #endif /* _SANDIX_CPUMASK_H_ */
