@@ -16,15 +16,11 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#include <sandix/magic.h>
-#include <sandix/sched.h>
-#include <sandix/compiler.h>
+#ifndef _SANDIX_SMP_H_
+#define _SANDIX_SMP_H_
 
-#include <asm/switch_to.h>
+#include <asm/smp.h>
 
+#define smp_processor_id()	arch_smp_processor_id()
 
-void set_task_stack_end_magic(struct task_struct *task)
-{
-	unsigned long *ptr = end_of_stack(task);
-	*ptr = STACK_END_MAGIC;
-}
+#endif /* _SANDIX_SMP_H_ */
