@@ -1,30 +1,23 @@
 /*
- * Recently, i have been working on ccNUMA system.
- * Through the experience of progamming linux smp
- * code and using linux smp APIs, i have gained some
- * common understanding about smp.
+ *	Copyright (C) 2015-2016 Yizhou Shan <shanyizhou@ict.ac.cn>
  *
- * The smp code in linux locate in x86/kernel/smp.c & smpboot.c,
- * and some definitions about IRQ number in asm/irq_vectors.h,
- * and some IDT initializations in x86/kernel/irqinit.c
- * They are used to send/receive IPIs between different cores.
+ *	This program is free software; you can redistribute it and/or modify
+ *	it under the terms of the GNU General Public License as published by
+ *	the Free Software Foundation; either version 2 of the License, or
+ *	(at your option) any later version.
  *
- * How linux get information about SMP topology? Through the
- * MP description table prepared by BIOS or detect the whole
- * system by himself? x86/kernel/mpparse.c is used to parse
- * MP table. So that's it?
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
  *
- * Also, the SDM is very helpful and descriptive. Read Chap.10
- * in SDM3 about APIC which depicts the fundamentals of Intel
- * APIC system. In addition, read Intel MP Spec, which is old.
- *
- * This file is touched in Tue Jul 14 23:46:56 CST 2015, Sandix
- * should support SMP architecture!
- */
-/*
- * From SDM:
- * When the low double-word of the ICR is written to, the local
- * APIC creates an IPI message from the information contained
- * in the ICR and sends the message out on the bus.
+ *	You should have received a copy of the GNU General Public License along
+ *	with this program; if not, write to the Free Software Foundation, Inc.,
+ *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
+#include <sandix/threads.h>
+#include <sandix/compiler.h>
+
+int nr_cpu_ids __read_mostly = NR_CPUS;
+EXPORT_SYMBOL(nr_cpu_ids);
