@@ -528,7 +528,12 @@ Sun Feb 21 09:34:09 CST 2016
 
 
 Mon Feb 22 11:04:52 CST 2016
-- [+] kernel/sched.c
+- [+] include/sandix/threads.h			[D] put NR_CPUS here
+- [+] arch/x86/include/asm/cpu.h		[D] online, active things
+- [M] arch/x86/include/asm/cpumask.h
+- [+] arch/x86/include/asm/smp.h		[D] smp processor id things
+- [+] include/sandix/smp.h
+- [+] kernel/sched.c				[D] switch_to things
 - [+] include/asm-generic/switch_to.h
 - [+] arch/x86/include/asm/switch_to.h
 - [M] arch/x86/kernel/process_32.c
